[gd_scene load_steps=3 format=3 uid="uid://gmbnmdvupiqb"]

[ext_resource type="Texture2D" uid="uid://crj5kg1lxg1c1" path="res://assets/ArrowUp.png" id="1_jx1b6"]
[ext_resource type="Script" path="res://src/scripts/onscreenButtons.gd" id="1_ng3cr"]

[node name="OnscreenButtons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ng3cr")

[node name="Up" type="TextureButton" parent="."]
self_modulate = Color(0.611765, 0.611765, 0.611765, 1)
layout_mode = 0
offset_left = -500.0
offset_top = -128.0
offset_right = -244.0
offset_bottom = 128.0
texture_normal = ExtResource("1_jx1b6")

[node name="Down" type="TextureButton" parent="."]
self_modulate = Color(0.611765, 0.611765, 0.611765, 1)
layout_mode = 0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 384.0
rotation = 3.14159
texture_normal = ExtResource("1_jx1b6")

[node name="Left" type="TextureButton" parent="."]
self_modulate = Color(0.611765, 0.611765, 0.611765, 1)
layout_mode = 0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 384.0
rotation = -1.5708
texture_normal = ExtResource("1_jx1b6")

[node name="Right" type="TextureButton" parent="."]
self_modulate = Color(0.611765, 0.611765, 0.611765, 1)
layout_mode = 0
offset_left = 500.0
offset_top = -128.0
offset_right = 756.0
offset_bottom = 128.0
rotation = 1.5708
texture_normal = ExtResource("1_jx1b6")

[connection signal="button_down" from="Up" to="." method="_on_up_button_down"]
[connection signal="button_up" from="Up" to="." method="_on_up_button_up"]
[connection signal="button_down" from="Down" to="." method="_on_down_button_down"]
[connection signal="button_up" from="Down" to="." method="_on_down_button_up"]
[connection signal="button_down" from="Left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="Left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="Right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="Right" to="." method="_on_right_button_up"]
